@@ -6,6 +6,7 @@ from OFS.SimpleItem import SimpleItem
 from Products.CMFCore.utils import getToolByName
 from Key import Key
 from globalVars import ANY_CONTEXT, ANY_BUTTON
+from utils import log
 
 _marker = []
 
@@ -51,7 +52,10 @@ class FormActionKey(Key):
         if context_type:
             if controller:
                 if not context_type in controller.listContextTypes():
-                    raise ValueError, 'Illegal context type %s' % context_type
+                    log('Unknown context type %s for template %s' % (str(context_type), str(object_id)))
+                    # Don't raise an exception because sometimes full list of
+                    # types may be unavailable (e.g. when moving a site)
+                    # raise ValueError, 'Illegal context type %s' % context_type
         else:
             context_type = ANY_CONTEXT
 
